# oktoplus

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark_results/: PERF_TODO.md  REPORT.md  RESULTS.md  bench_aggregate.py  make_chart.py  memory_results.md  report.html  run_benchmark.sh  run_growth_bench.sh  run_memory.sh  run_multikey_heavy_bench.sh  run_parallelism_advantage_bench.sh
benchmark_results/raw/: concurrent_random_oktoplus_c100_p16.csv  concurrent_random_oktoplus_c10_p16.csv  concurrent_random_oktoplus_c200_p16.csv  concurrent_random_oktoplus_c50_p16.csv  concurrent_random_redis_c100_p16.csv  concurrent_random_redis_c10_p16.csv  concurrent_random_redis_c200_p16.csv  concurrent_random_redis_c50_p16.csv  growth_oktoplus.csv  growth_redis.config  growth_redis.csv  memory.config  memory.csv  multikey_oktoplus.csv  multikey_redis.config  multikey_redis.csv  parallel_oktoplus_c1.csv  parallel_oktoplus_c10.csv  parallel_oktoplus_c100.csv  parallel_oktoplus_c200.csv  parallel_oktoplus_c50.csv  parallel_redis_c1.csv  parallel_redis_c10.csv  parallel_redis_c100.csv  parallel_redis_c200.csv  parallel_redis_c50.csv  parallelism_oktoplus.csv  parallelism_redis.config  parallelism_redis.csv  speed_oktoplus_p1.csv  speed_oktoplus_p16.csv  speed_oktoplus_p16_d256.csv  speed_oktoplus_p1_d256.csv  speed_redis_p1.csv  speed_redis_p16.config  speed_redis_p16.csv  speed_redis_p16_d256.csv  speed_redis_p1_d256.csv
cppcheck/: check.sh  report.xml
docs/: compatibility_list.md  compatibility_lists.md  compatibility_sets.md  compatibility_strings.md  deques.md  howtobuild.md  vectors.md
scripts/smoke/: test_accept_rearm.sh  test_blpop_disconnect_no_dataloss.sh
src/: CMakeLists.txt
src/Benchmarks/: CMakeLists.txt
src/Benchmarks/Inserts/: CMakeLists.txt  main.cpp
src/Benchmarks/Reads/: CMakeLists.txt  main.cpp
src/Executables/: CMakeLists.txt
src/Executables/Oktoplus/: CMakeLists.txt  main.cpp
src/Libraries/: CMakeLists.txt
src/Libraries/Commands/: CMakeLists.txt  commands.proto  commands_admin.cpp  commands_admin.h  commands_client.cpp  commands_client.h  commands_deque.cpp  commands_deque.h  commands_list.cpp  commands_list.h  commands_server.cpp  commands_server.h  commands_server_service.h  commands_set.cpp  commands_set.h  commands_vector.cpp  commands_vector.h  list_messages.proto  set_messages.proto  types.proto
src/Libraries/Configurations/: CMakeLists.txt  commandlineconfiguration.cpp  commandlineconfiguration.h  defaultconfiguration.cpp  defaultconfiguration.h  jsonconfiguration.cpp  jsonconfiguration.h  mainconfiguration.cpp  mainconfiguration.h  oktoplusconfiguration.cpp  oktoplusconfiguration.h
src/Libraries/Resp/: CMakeLists.txt  resp_handler.cpp  resp_handler.h  resp_parser.cpp  resp_parser.h  resp_server.cpp  resp_server.h
src/Libraries/Storage/: CMakeLists.txt  backoperations.h  backoperations.inl  blocking_waiter.h  deques.cpp  deques.h  frontonlyoperations.h  frontonlyoperations.inl  genericcontainer.h  lists.cpp  lists.h  release_memory.h  sequencecontainer.h  sets.cpp  sets.h  storage_context.h  vectors.cpp  vectors.h
src/Libraries/Support/: chrono.h  containerfunctorapplier.h  googleraii.h  logo.h  mutex.h  non_copyable.h  spinlock.h
src/TestUnits/: CMakeLists.txt  testsubunit.cpp  testunit.cpp
src/TestUnits/TestCommands/: CMakeLists.txt  testcommands_server.cpp  testsubunit.cpp
src/TestUnits/TestConfigurations/: CMakeLists.txt  testconfiguration.cpp
src/TestUnits/TestResp/: CMakeLists.txt  testresp_handler.cpp  testresp_parser.cpp  testresp_server.cpp
src/TestUnits/TestStorage/: CMakeLists.txt  testlists.cpp  testsequencecontainer.cpp  testsets.cpp  teststorageconcurrency.cpp
